--- a/styles/TokenPurchaseForm.css
+++ b/styles/TokenPurchaseForm.css
@@ -11,7 +11,7 @@
 }
 
 .input-group label {
-    flex: 0 0 20%;
+    /* flex: 0 0 20%; */
     text-align: right;
     margin-right: 1rem;
 }
@@ -19,6 +19,7 @@
 .input-group select,
 .input-group input {
     flex: 1;
+    width: fit-content;
     padding: 0.5rem;
     margin-right: 0.5rem;
     border: 1px solid #e1e1e1;
